Mvcc index population await horizon before population scan start ()
In this part of mvcc index population journey index population job starts accepting concurrent updates but doesn't start store scan until horizon reaches transactions id that started that job.
This ensures that any transaction that hasn't seen created index and therefore hasn't generated index update commands is completed and is visible to the scan.
Concurrent updates queue is processed while waiting to keep it from growing.